# expression-parser

./: CMakeLists.txt  README.md  build.sh  constant.cpp  constant.hpp  constants.cpp  evalUtils.cpp  evalUtils.hpp  evaluator.cpp  evaluator.hpp  function.cpp  function.hpp  functions.cpp  functions.hpp  main.cpp  number.cpp  number.hpp  operator.cpp  operator.hpp  types.hpp  value.hpp
unitTests/: evaluator.cpp  number.cpp
